--- a/src/main/resources/templates/candidate_form.html
+++ b/src/main/resources/templates/candidate_form.html
@@ -3,25 +3,15 @@
 <head>
     <title>Candidate Registration</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 </head>
-<style>
-    h1 {
-        width: 500px;
-        margin: 0 auto;
-        text-align: center;
-    }
-</style>
-
 <body>
-
-<div class="container">
+<div class="container d-flex justify-content-center">
     <h1>Candidate Registration</h1>
 </div>
-
 <div class="container my-3">
     <div class="row">
         <div class="col-md-8 mx-auto">
@@ -45,7 +35,8 @@
                     </div>
                     <div class="col-md-6 form-group">
                         <label>Skills</label>
-                        <select multiple th:name="skills" class="form-control" th:value="*{skills}">
+                        <select multiple th:name="skills" class="form-control selectpicker"
+                                data-live-search="true" th:value="*{skills}">
                             <option
                                     th:each="skill : ${skillDtos}"
                                     th:value="${skill}"
@@ -64,11 +55,10 @@
                             </textarea>
                         </label>
                     </div>
-
-                    <div class="col-md-6 form-group" style="max-width: 500px">
+                    <div class="col-md-6 form-group">
                         <labe>Profile Image</labe>
-                        <input type="file" th:name="file" class="form-control" accept="image/*" required/>
-
+                        <input id="file" type="file" th:name="file" class="form-control" accept="image/*" required/>
+                        <img class="form-control" id="preview" src="#" alt="your image"/>
                         <div th:if="${message != null}"
                              class="alert alert-secondary alert-dismissible fade show text-center message mt-3" role="alert">
                             [[${message}]]
@@ -77,17 +67,32 @@
                             </button>
                         </div>
                     </div>
-
                 </div>
                 <button type="submit" class="btn btn-primary btn-block mt-3">Save</button>
             </form>
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
+<script>
+    let image = document.getElementById("file");
+    let imagePreview = document.getElementById("preview");
+    image.onchange = () => {
+        const [file] = imageFile.files
+        if (file) {
+            imagePreview.src = URL.createObjectURL(file)
+        }
+    }
+</script>
 </body>
 </html>
