adding image preview to candidate registration form and listing candidate

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,10 +24,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/candidate/save}">Candidate</a>
+                        <a class="nav-link" th:href="@{/api/candidate/save}">Candidate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/images}">Agent</a>
+                        <a class="nav-link" th:href="@{/api/candidate}">All Candidates</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/api/agent}">Agent</a>
                     </li>
                 </ul>
             </div>
