--- a/src/main/resources/templates/candidate_form.html
+++ b/src/main/resources/templates/candidate_form.html
@@ -15,7 +15,7 @@
 <div class="container my-3">
     <div class="row">
         <div class="col-md-8 mx-auto">
-            <form th:action="@{/candidate/save}" th:object="${candidateDto}" method="post" enctype="multipart/form-data">
+            <form th:action="@{/api/candidate/save}" th:object="${candidateDto}" method="post" enctype="multipart/form-data">
                 <div class="form-row">
                     <div class="col-md-6 form-group">
                         <label>First name</label>
@@ -88,7 +88,7 @@
     let image = document.getElementById("file");
     let imagePreview = document.getElementById("preview");
     image.onchange = () => {
-        const [file] = imageFile.files
+        const [file] = image.files
         if (file) {
             imagePreview.src = URL.createObjectURL(file)
         }
