--- a/src/main/resources/templates/candidate_form.html
+++ b/src/main/resources/templates/candidate_form.html
@@ -3,12 +3,16 @@
 <head>
     <title>Candidate Registration</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 </head>
 <body>
+<div th:replace="~{fragments/header :: header}"></div>
+
 <div class="container d-flex justify-content-center">
     <h1>Candidate Registration</h1>
 </div>
