--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,17 +11,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Sorry mate, seems that You can't use this webapp properly!</h1>
-        <b><span th:if="${errorMessage}" th:text="${errorMessage}">Error</span></b>
-        <br>
-        <img th:src="@{/images/oh_no.png}" alt="OH NO" width="auto" height="300px"/>
-        <br>
-        <br>
-        <p>
-            <a th:href="@{/}" class="btn btn-info" role="button">Back to the main page</a>
-        </p>
-    </div>
+<div th:replace="~{fragments/header :: header}"></div>
+
+<div class="container">
+    <h1>Sorry mate, seems that You can't use this webapp properly!</h1>
+    <b><span th:if="${errorMessage}" th:text="${errorMessage}">Error</span></b>
+    <br>
+    <img th:src="@{/images/oh_no.png}" alt="OH NO" width="auto" height="300px"/>
+    <br>
+    <br>
+    <p>
+        <a th:href="@{/}" class="btn btn-info" role="button">Back to the main page</a>
+    </p>
+</div>
 </body>
 
 </html>
